@@ -16,10 +16,5 @@
       <item name="android:windowIsTranslucent">true</item>
       <item name="android:windowNoTitle">true</item>
       <item name="android:windowAnimationStyle">@null</item>
-<!--
-      <item name="android:windowContentOverlay">@null</item>
-      <item name="android:windowIsFloating">true</item>
-      <item name="android:backgroundDimEnabled">true</item>
-      -->
     </style>
 </resources>
